@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class jobCategory{
    jobName
}

class HRM {
    name
    email
    password
}

class Skill {
    skillName
}

class Collaborator{
name
job
birthdate
admissionDate
address
addressCity
addressZipCode
mobileNumber
email
docType
docNumber
}


HRM "1" - "1" Collaborator: register >
Collaborator "1" -- "0..*" Skill: have>
Collaborator "1" -- "1" jobCategory: have>

@enduml